@@ -10,6 +10,7 @@
 - Move version to v1.6.18
 - Merge pull request #167
 - Cleanup old code
+- Replace depricated pcap_lookupdev call in nfpcapd
 
 2019-07-31
 - Add early record size sanity check also for nfprofile, nfanon and nfreplay
